:art: 增加工具类|优化代码